After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 690454 - WindowManager: fix regression from 3b8a125732a7ad743903d5676af549b0a210d6b4
WindowManager: fix regression from 3b8a125732a7ad743903d5676af549b0a210d6b4
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
Depends on:
Blocks:
 
 
Reported: 2012-12-18 22:01 UTC by Giovanni Campagna
Modified: 2012-12-18 22:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
WindowManager: fix regression from 3b8a125732a7ad743903d5676af549b0a210d6b4 (1.46 KB, patch)
2012-12-18 22:01 UTC, Giovanni Campagna
none Details | Review
window: recompute modal dialog attached status when the window type changes (980 bytes, patch)
2012-12-18 22:19 UTC, Giovanni Campagna
committed Details | Review

Description Giovanni Campagna 2012-12-18 22:01:39 UTC
The attached window status is derived from the window type, but it is not
changed if the window type changes. This means that not all attached dialogs
are of type MODAL_DIALOG, but we want to animate them anyway (in particular
to remove the parent dimming), so add an explicit check for the in
shouldAnimate().
This sounds like an edge case but it affected modal dialogs in nautilus.
Comment 1 Giovanni Campagna 2012-12-18 22:01:42 UTC
Created attachment 231837 [details] [review]
WindowManager: fix regression from 3b8a125732a7ad743903d5676af549b0a210d6b4
Comment 2 Jasper St. Pierre (not reading bugmail) 2012-12-18 22:03:40 UTC
Seems like a mutter bug instead.
Comment 3 Giovanni Campagna 2012-12-18 22:19:14 UTC
Created attachment 231839 [details] [review]
window: recompute modal dialog attached status when the window type changes

We want to maintain the invariant that an attached modal dialog is always
of type MODAL_DIALOG, so recompute is_attached_dialog() when the window
type changes.

Ok, here is the mutter solution, if you prefer it.
Comment 4 Jasper St. Pierre (not reading bugmail) 2012-12-18 22:26:47 UTC
Review of attachment 231839 [details] [review]:

Much better.
Comment 5 Giovanni Campagna 2012-12-18 22:30:34 UTC
Attachment 231839 [details] pushed as 6111d3e - window: recompute modal dialog attached status when the window type changes